--- a/htmlfiles/tables.html
+++ b/htmlfiles/tables.html
@@ -1,80 +1,386 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+  </head>
 
-  <!-- Bootstrap CSS v5.2.1 -->
-<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-
-</head>
-
-<body>
-  <header>
-    <!-- place navbar here -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-light"  aria-label="main nav">
-      <div class="container">
+  <body>
+    <header>
+      <!-- place navbar here -->
+      <nav
+        class="navbar navbar-expand-sm navbar-light bg-light"
+        aria-label="main nav"
+      >
+        <div class="container">
           <a class="navbar-brand" href="#">brand</a>
-          <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#resp"><span class="navbar-toggler-icon" ></span></button>
+          <button
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#resp"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="resp">
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                  <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../htmlfiles/ht.html">headings and typography</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/td.html">Textalignment and Display</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/float.html">Floats and fixed positions</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/colors.html">colors and background</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/margin.html">margin and padding</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
                   Dropdown
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item"  href="../htmlfiles/sb.html">sizing and borders</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/navs.html">navbars</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/list.html">listgroups and badges</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/forms.html">forms</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/inputg.html">Input groups</a></li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/ht.html"
+                      >headings and typography</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/td.html"
+                      >Textalignment and Display</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/float.html"
+                      >Floats and fixed positions</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/colors.html"
+                      >colors and background</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/margin.html"
+                      >margin and padding</a
+                    >
+                  </li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
                   Dropdown
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../htmlfiles/alp.html">alert</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/tables.html">tables and pagination</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/cards.html">Working with Cards</a></li>
-                  <li><a class="dropdown-item" href="../htmlfiles/mob.html">Media objects</a></li>
-              
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/sb.html"
+                      >sizing and borders</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/navs.html"
+                      >navbars</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/list.html"
+                      >listgroups and badges</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/forms.html"
+                      >forms</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/inputg.html"
+                      >Input groups</a
+                    >
+                  </li>
                 </ul>
               </li>
-           </ul>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/alp.html"
+                      >alert</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/tables.html"
+                      >tables and pagination</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/cards.html"
+                      >Working with Cards</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="../htmlfiles/mob.html"
+                      >Media objects</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
           </div>
-         
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="container border barder-dark">
+        <h1>tables</h1>
+        <table class="table">
+          <caption>
+            bootstrap table
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">column1</th>
+              <th scope="col">column2</th>
+              <th scope="col">column3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+          </tbody>
+        </table>
+        <h2>striped table</h2>
+        <table class="table table-striped table-hover table-sm">
+          <caption>
+            bootstrap table
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">column1</th>
+              <th scope="col">column2</th>
+              <th scope="col">column3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+          </tbody>
+        </table>
+        <h2>backgroud table</h2>
+        <table class="table">
+          <caption>
+            bootstrap table
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">column1</th>
+              <th scope="col">column2</th>
+              <th scope="col">column3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="bg-success">
+              <td>1</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr class="bg-warning">
+              <td>2</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr class="bg-danger">
+              <td>3</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr class="bg-light">
+              <td>4</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr class="bg-dark text-light">
+              <td>5</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr class="bg-info">
+              <td>2</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="table table-dark">
+          <caption>
+            bootstrap table
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">column1</th>
+              <th scope="col">column2</th>
+              <th scope="col">column3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table class="table table-bordered">
+          <caption>
+            bootstrap table
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">column1</th>
+              <th scope="col">column2</th>
+              <th scope="col">column3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="table table-hover">
+          <caption>
+            bootstrap table
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">column1</th>
+              <th scope="col">column2</th>
+              <th scope="col">column3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>item1</td>
+              <td>item2</td>
+            </tr>
+          </tbody>
+        </table>
+        <h2>Pagination</h2>
+        <nav role="navigation" aria-label="navigation">
+          <ul class="pagination">
+            <li class="page-item">
+              <a class="page-link" href="#">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
+        <nav role="navigation" aria-label="navigation">
+          <ul class="pagination justify-content-center">
+            <li class="page-item">
+              <a class="page-link" href="#">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
+        <nav role="navigation" aria-label="navigation">
+          <ul class="pagination justify-content-end">
+            <li class="page-item">
+              <a class="page-link" href="#">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
+        <nav role="navigation" aria-label="navigation">
+          <ul class="pagination pagination-lg">
+            <li class="page-item">
+              <a class="page-link" href="#">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
+        <nav role="navigation" aria-label="navigation">
+          <ul class="pagination pagination-sm">
+            <li class="page-item">
+              <a class="page-link" href="#">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
       </div>
-  </nav>
-  </header>
-  <main>
+    </main>
+    <footer>
+      <!-- place footer here -->
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
 
-  </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
